2007-06-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_decoder_init):
	* src/voice-control.c: (setup_voice_control_widget):
	
	Fixes localization issues.

2007-06-20  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/desktop-control.dict:
	
	Updated dictionary to allow full GEdit control.

2007-06-14  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* README:
	
	Updated note about Debian packages. Thanks to
	Dimitri Provoost.

2007-06-12  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_construct_trans_list):
	* src/voice-control.c: (on_sink_message):
	
	Multiword commands are properly converted to FSG.

2007-06-11  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/desktop-control.dict:
	* src/gstsphinxsink.c: (gst_sphinx_sink_render),
	(gst_sphinx_construct_trans_list), (gst_sphinx_sink_set_fsg):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (control_start), (process_action),
	(on_sink_message):
	
	Ally actions work. You can just say 'Open' or 'Cancel' and
	UI will listen to you.

2007-06-10  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/gstsphinxsink.c: (gst_sphinx_sink_class_init),
	(gst_sphinx_sink_init), (gst_sphinx_sink_render),
	(gst_sphinx_sink_set_fsg):
	* src/gstsphinxsink.h:
	* src/spi-listener.c: (control_spi_listener_process_event),
	(control_spi_listener_init), (control_spi_listener_class_init),
	(control_spi_listener_start), (control_spi_listener_stop),
	(control_spi_listener_get_object_list):
	* src/spi-listener.h:
	* src/voice-control.c: (control_start), (control_stop),
	(voice_control_ui_changed), (voice_control_applet_init):
	
	List of UI items is bypassed to sphinx fsg.

2007-06-10  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/spi-listener.c: (is_actionable),
	(control_spi_listener_normalize),
	(control_spi_listener_build_actions_list),
	(control_spi_listener_process_event),
	(control_spi_listener_window_listener_cb):
	
	Normalized names
